--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -57,19 +57,19 @@ hr.star-light:after {
   color: white;
 }
 hr.star-primary {
-  border-color: #2C3E50;
+  border-color: #a40000;
 }
 hr.star-primary:after {
   background-color: white;
-  color: #2C3E50;
+  color: #a40000;
 }
 .img-centered {
   margin: 0 auto;
 }
 header {
   text-align: center;
-  background: #18BC9C;
-  color: white;
+  background: #ffffff;
+  color: #a40000;
 }
 header .container {
   padding-top: 100px;
@@ -103,7 +103,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #2C3E50;
+  background: #3465a4;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -174,6 +174,7 @@ header .intro-text .skills {
   }
 }
 section {
+  background: #ffffff;
   padding: 100px 0;
 }
 section h2 {
@@ -181,7 +182,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #729fcf;
   color: white;
 }
 @media (max-width: 767px) {
@@ -513,4 +514,8 @@ fieldset[disabled] .btn-success.active {
 }
 div#maincontent {
   outline: none;
+}
+
+h2 {
+  color:#a40000;
 }
