--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -69,7 +69,7 @@ hr.star-primary:after {
 header {
   text-align: center;
   background: #ffffff;
-  color: #a40000;
+  color: #204a87;
 }
 header .container {
   padding-top: 100px;
@@ -103,7 +103,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #3465a4;
+  background: #204a87;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -178,11 +178,26 @@ section {
   padding: 100px 0;
 }
 section h2 {
-  margin: 0;
+  margin: 0px;
   font-size: 3em;
+  color:#204a87;
+}
+.h2_divider {
+  height: 3px;
+  width: 100%;
+  display:block; 
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #204a87;
+  margin-bottom: 75px;
 }
 section.success {
   background: #729fcf;
+  color: white;
+}
+/* FhP */
+section.grey-success {
+  background: rgba(238, 238, 236, 0.50);
   color: white;
 }
 @media (max-width: 767px) {
@@ -298,14 +313,14 @@ footer h3 {
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2C3E50;
+  background-color: #3465a4;
 }
 footer .footer-col {
   margin-bottom: 50px;
 }
 footer .footer-below {
   padding: 25px 0;
-  background-color: #233140;
+  background-color: #204a87;
 }
 .btn-outline {
   color: white;
@@ -514,8 +529,4 @@ fieldset[disabled] .btn-success.active {
 }
 div#maincontent {
   outline: none;
-}
-
-h2 {
-  color:#a40000;
 }
